# Graphics

./: .gitignore  CMakeLists.txt
data/: baseWithHole.mtl  baseWithHole3.mtl  makePaticles.py  untitled.blend  untitled.blend1
data/Day3_assignments/: Waseda_CG_Course_03.docx
doc/: questions.txt
src/: CMakeLists.txt
src/Day1/: Day1.sln
src/Day1/Program01/: Program01.vcxproj  main.cpp
src/Day1/Program02/: Program02.vcxproj
src/Day1/Program03/: Program03.vcxproj
src/Day1/Program04/: Program04.vcxproj  main.cpp
src/Day1/Program04_1/: MeshDrawer.cpp  MeshDrawer.h  Program04_1.vcxproj  main.cpp
src/Day1/Sample01/: Sample01.vcxproj  main.cpp
src/Day2/: Day2.sln
src/Day2/Animation/: Animation.vcxproj  Animation.vcxproj.filters  main_templete.cpp__
src/Day2/Clock/: Clock.vcxproj  Clock.vcxproj.filters  font.h  main.cpp
src/Day2/Program02/: main.cpp
src/Day2/Program03/: Program03.vcxproj  main.cpp
src/Day2/Program04_1/: Program04_1.vcxproj.filters  main.cpp
src/Day2/ResizeWindow/: ResizeWindow.vcxproj  main.cpp
src/Day2/Sample01/: Sample01.vcxproj
src/Day2/Texture/: Texture.vcxproj  Texture.vcxproj.filters  common.h  main.cpp
src/Day2/VBuffer/: VBuffer.vcxproj  main.cpp
src/Day2/VBufferBoxes_drawIteratively/: VBufferBoxes_drawIteratively.vcxproj  main.cpp
src/Day2/boxes/: boxes.vcxproj  main.cpp
src/Day3/: Day3.sln
src/Day4/: CMakeLists.txt  Day4.sln
src/Day4/ObjectSelection/: CMakeLists.txt  ObjectSelection.vcxproj  ObjectSelection.vcxproj.filters  common.h  main.cpp  render.frag  render.vert
src/props/: OpenGL.Common.x4.props
(+303 files in other folders)
